--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="w-[160px] lg:w-full">
                   <button
-                    class="flex gap-[5px] lg:gap-[2px] xl:gap-[5px] text-[16px] justify-center items-center font-extrabold py-[8px] px-3 rounded-full bg-[#ABEF5F]"
+                    class="flex gap-[5px] lg:gap-[2px] xl:gap-[5px] text-[16px] justify-center items-center font-extrabold py-[8px] px-3 rounded-full bg-[#ABEF5F] hover:bg-slate-300 duration-300"
                   >
                     Book Consult
                     <img
@@ -105,7 +105,7 @@
               <div class="flex items-center mr-[1px] lg:hidden">
                 <div class="dropdown dropdown-end">
                   <div tabindex="0" role="button" class="">
-                    <img class="w-[40px] hover:bg-slate-400" src="/assets/Frame 6.png" alt="" />
+                    <img class="w-[40px]" src="/assets/Frame 6.png" alt="" />
                   </div>
                   <ul
                     tabindex="0"
