--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   </div>
                   <ul
                     tabindex="0"
-                    class="dropdown-content menu bg-base-100 rounded-box z-[1] w-32 md:w-36 p-2 shadow"
+                    class="dropdown-content menu bg-base-100 rounded-box z-[1] w-[136px] md:w-36 p-2 shadow"
                   >
                     <li class="hover:bg-red-400 p-1">
                       <a href="#home">Home</a>
