added menu icon

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="flex items-center mr-[1px] lg:hidden">
                 <div class="dropdown dropdown-end">
                   <div tabindex="0" role="button" class="">
-                    <img class="w-[40px]" src="/assets/Frame 6.png" alt="" />
+                    <i class="fa-solid fa-bars text-[16px] py-[9px] px-[10px] border border-solid rounded-full"></i>
                   </div>
                   <ul
                     tabindex="0"
