--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="dropdown dropdown-end">
                   <div tabindex="0" role="button" class="">
                     <i
-                      class="fa-solid fa-bars text-[16px] md:text-[19px] py-[9px] px-[11px] border border-solid rounded-full"
+                      class="fa-solid fa-bars text-[15px] md:text-[19px] py-[8px] md:py-[9px] md:px-[10px] px-[9px] border border-solid rounded-full"
                     ></i>
                   </div>
                   <ul
