--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
     </script>
   </head>
   <body class="font-manrope">
-    <header class="w-[97%] mx-auto">
+    <header class="mx-auto bg-[linear-gradient(0.00deg,rgba(245,245,245,0),rgba(245,245,245,1)100%)]">
       <!-- start navbar section -->
-      <section class="container mx-auto mt-3 mb-10">
-        <div class="navbar bg-base-100">
+      <section class="container mx-auto pt-3 mb-10 w-[97%]">
+        <div class="navbar">
           <div class="navbar-start mr-0 ml-0">
             <div class="flex gap-[8px] justify-center items-center">
               <img
-                class="w-[32px] h-[32px] mt-[3px]"
+                class="w-[32px] h-[32px] mt-[3px] ml-[2px]"
                 src="./assets/arrow-up-right-01.png"
                 alt=""
               />
@@ -162,8 +162,8 @@
               accents, and large windows that flood the space with natural
               light.
             </p>
-            <button class="text-[20px] font-bold">
-              View Details <img src="./assets/arrow-up-right-01.png" alt="" />
+            <button class="btn mx-auto w-full md:w-[206px] text-[20px] font-bold flex justify-center items-center gap-[5px] px-5 py-2 bg-[#33ffbb] rounded-full">
+              View Details <img class="w-[22px] h-[22px]" src="./assets/arrow-up-right-01.png" alt="" />
             </button>
           </div>
         </div>
