--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <body class="font-manrope">
     <header class="mx-auto bg-[linear-gradient(0.00deg,rgba(245,245,245,0),rgba(245,245,245,1)100%)]">
       <!-- start navbar section -->
-      <section class="container mx-auto pt-3 mb-10 w-[97%]">
+      <section class="container mx-auto pt-3 lg:mb-10 w-[97%]">
         <div class="navbar">
           <div class="navbar-start mr-0 ml-0">
             <div class="flex gap-[8px] justify-center items-center">
@@ -141,7 +141,7 @@
       </section>
       <!-- end navbar section -->
       <!-- start 1st section -->
-      <section class="container mx-auto mt-3 mb-16 w-[97%]">
+      <section class="container mx-auto lg:mt-3 mb-16 w-[97%]">
         <div class="flex flex-col justify-center items-center text-center">
           <!-- image part -->
           <div class="mb-4 lg:mb-6">
