added a new file

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </section>
       <!-- end navbar section -->
       <!-- start 1st section -->
-      <section class="container mx-auto lg:mt-3 mb-16 w-[97%]">
+      <section class="container mx-auto mt-3 mb-16 w-[97%]">
         <div class="flex flex-col justify-center items-center text-center">
           <!-- image part -->
           <div class="mb-4 lg:mb-6">
