--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               accents, and large windows that flood the space with natural
               light.
             </p>
-            <button class="btn mx-auto w-full md:w-[206px] text-[20px] font-bold flex justify-center items-center gap-[5px] px-5 py-2 bg-[#33ffbb] rounded-full">
+            <button class="btn mx-auto w-[98%] md:w-[206px] text-[20px] font-bold flex justify-center items-center gap-[5px] px-5 py-2 bg-[#33ffbb] rounded-full">
               View Details <img class="w-[22px] h-[22px]" src="./assets/arrow-up-right-01.png" alt="" />
             </button>
           </div>
