--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     </script>
   </head>
   <body class="font-manrope">
-    <header class="mx-auto bg-[linear-gradient(0.00deg,rgba(245,245,245,0),rgba(245,245,245,1)100%)]">
+    <header
+      class="mx-auto bg-[linear-gradient(0.00deg,rgba(240,240,240,0),rgba(240,240,240,1)100%)]"
+    >
       <!-- start navbar section -->
       <section class="container mx-auto pt-3 lg:mb-10 w-[97%]">
         <div class="navbar">
@@ -145,10 +147,14 @@
         <div class="flex flex-col justify-center items-center text-center">
           <!-- image part -->
           <div class="mb-4 lg:mb-6">
-            <img class="mx-auto w-5/6 lg:w-full" src="./assets/banner.png" alt="" />
+            <img
+              class="mx-auto w-5/6 lg:w-full"
+              src="./assets/banner.png"
+              alt=""
+            />
           </div>
           <!-- content part -->
-          <div class="">
+          <div>
             <h1
               class="mx-auto w-[98%] md:w-5/6 text-[28px] md:text-[32px] lg:text-[50px] font-extrabold leading-tight mb-4 lg:mb-6"
             >
@@ -162,13 +168,81 @@
               accents, and large windows that flood the space with natural
               light.
             </p>
-            <button class="btn mx-auto w-[97%] md:w-[206px] text-[20px] font-bold flex justify-center items-center gap-[5px] px-5 py-2 bg-[#33ffbb] rounded-full">
-              View Details <img class="w-[22px] h-[22px]" src="./assets/arrow-up-right-01.png" alt="" />
+            <button
+              class="btn mx-auto w-[97%] md:w-[206px] text-[20px] font-bold flex justify-center items-center gap-[5px] px-5 py-2 bg-[#33ffbb] rounded-full"
+            >
+              View Details
+              <img
+                class="w-[22px] h-[22px]"
+                src="./assets/arrow-up-right-01.png"
+                alt=""
+              />
             </button>
           </div>
         </div>
       </section>
       <!-- end 1st section -->
     </header>
+    <main>
+      <!-- this section included 3 part -->
+       <!-- container of 3 sections -->
+      <section class="mt-40">
+        <!-- 1st part -->
+         <!-- start design spaces section -->
+         <section class="container mx-auto w-[97%]">
+          <!-- container of this section -->
+          <div class="flex gap-9 justify-center items-center">
+            <!-- content part -->
+             <div class="">
+              <button><i class="fa-solid fa-arrow-right"></i><a href="">About Us</a></button>
+              <h2>We design thoughtful, liveable spaces</h2>
+              <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              <!-- start commercial and residential part -->
+               <div>
+                <!-- commercial part -->
+                 <div>
+                  <div>
+                    <img src="./assets/commercial.png" alt="">
+                  </div>
+                  <div>
+                    <h4>Commercial</h4>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                  </div>
+                 </div>
+
+                <!-- residential part -->
+                 <div>
+                  <div>
+                    <img src="./assets/residential.png" alt="">
+                  </div>
+                  <div>
+                    <h4>Residential</h4>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                  </div>
+                 </div>
+               </div>
+              <!-- end commercial and residential part -->
+             </div>
+
+             <!-- image part -->
+              <div class="">
+                <img src="./assets/Rectangle.png" alt="">
+              </div>
+          </div>
+          <div><img src="./assets/Vector.png" alt=""></div>
+         </section>
+         <!-- end design spaces section -->
+
+        <!-- 2nd part -->
+         <!-- start happy client section-->
+         <section></section>
+         <!-- end happy client section-->
+
+        <!-- 3rd part -->
+         <!-- start works process section-->
+         <section></section>
+         <!-- end works process section -->
+      </section>
+    </main>
   </body>
 </html>
