--- a/index.html
+++ b/index.html
@@ -186,38 +186,42 @@
     <main>
       <!-- this section included 3 part -->
        <!-- container of 3 sections -->
-      <section class="mt-40">
+      <section class="mt-40 bg-gray-400">
         <!-- 1st part -->
          <!-- start design spaces section -->
-         <section class="container mx-auto w-[97%]">
+         <section class="container mx-auto w-[97%] px-5 py-8 md:px-[35px] md:py-[70px] lg:py-[100px] lg:relative">
           <!-- container of this section -->
-          <div class="flex gap-9 justify-center items-center">
+          <div class="flex flex-col lg:flex-row gap-9 lg:gap-12 justify-center items-center">
+            <!-- flex flex-col lg:flex-row gap-9 lg:gap-12 justify-center items-center -->
             <!-- content part -->
-             <div class="">
-              <button><i class="fa-solid fa-arrow-right"></i><a href="">About Us</a></button>
-              <h2>We design thoughtful, liveable spaces</h2>
-              <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+             <div class="lg:w-[50%] flex flex-col justify-center items-center  lg:justify-start lg:items-start lg:text-left">
+              <!-- lg:w-[50%] flex flex-col justify-center items-center  lg:justify-start lg:items-start lg:text-left -->
+              <div class="flex flex-col justify-center items-center text-center lg:justify-start lg:items-start lg:text-left">
+                <button class="hover:bg-slate-200 duration-300 font-bold text-[#494949] bg-[#FFFFFF] py-1 px-3 mb-4 rounded-full"><i class="fa-solid fa-arrow-right mr-1"></i><a class="" href="">About Us</a></button>
+              <h2 class="text-2xl md:text-[32px] lg:text-[40px] font-bold text-[#212121] mb-4 md:mb-6 lg:leading-tight">We design thoughtful,liveable spaces</h2>
+              <p class="text-[16px] font-medium mb-6 lg:mb-[34px] text-[#494949] ">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              </div>
               <!-- start commercial and residential part -->
-               <div>
+               <div class="flex flex-col md:flex-row lg:flex-col gap-4 md:gap-8 ">
                 <!-- commercial part -->
-                 <div>
+                 <div class="flex gap-5 lg:gap-6 p-5 lg:p-6 bg-[#FFFFFF] items-center rounded-2xl">
                   <div>
                     <img src="./assets/commercial.png" alt="">
                   </div>
                   <div>
-                    <h4>Commercial</h4>
-                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    <h4 class="text-[16px] md:text-[18px] lg:text-[20px] text-[#494949] font-extrabold mb-[10px]">Commercial</h4>
+                    <p class="text-[16px] font-medium text-[#737373]">The barn house captivates with its blend of rustic charm and modern.</p>
                   </div>
                  </div>
 
                 <!-- residential part -->
-                 <div>
+                 <div class="flex gap-5 lg:gap-6 p-5 lg:p-6 bg-[#FFFFFF] items-center rounded-2xl">
                   <div>
                     <img src="./assets/residential.png" alt="">
                   </div>
                   <div>
-                    <h4>Residential</h4>
-                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    <h4 class="text-[16px] md:text-[18px] lg:text-[20px] text-[#494949] font-extrabold mb-[10px]">Residential</h4>
+                    <p class="text-[16px] font-medium text-[#737373]">The barn house captivates with its blend of rustic charm and modern.</p>
                   </div>
                  </div>
                </div>
@@ -225,11 +229,11 @@
              </div>
 
              <!-- image part -->
-              <div class="">
-                <img src="./assets/Rectangle.png" alt="">
+              <div class="w-full lg:w-[50%]">
+                <img class="w-full" src="./assets/Rectangle.png" alt="">
               </div>
           </div>
-          <div><img src="./assets/Vector.png" alt=""></div>
+          <div class="hidden lg:block absolute top-[8%] right-[93%]"><img src="./assets/Vector.png" alt=""></div>
          </section>
          <!-- end design spaces section -->
 
