--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <section class="mt-40 bg-gray-400">
         <!-- 1st part -->
          <!-- start design spaces section -->
-         <section class="container mx-auto w-[97%] px-5 py-8 md:px-[35px] md:py-[70px] lg:py-[100px] lg:relative">
+         <section class="container mx-auto w-[97%] px-5 py-8 mb-10 md:px-[35px] md:py-[70px] lg:py-[100px] lg:relative">
           <!-- container of this section -->
           <div class="flex flex-col lg:flex-row gap-9 lg:gap-12 justify-center items-center">
             <!-- flex flex-col lg:flex-row gap-9 lg:gap-12 justify-center items-center -->
