added card section

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <section class="mt-40 bg-gray-400">
         <!-- 1st part -->
          <!-- start design spaces section -->
-         <section class="container mx-auto w-[97%] px-5 py-8 mb-10 md:px-[35px] md:py-[70px] lg:py-[100px] lg:relative">
+         <section class="container mx-auto w-[97%] px-5 pt-8 md:px-[35px] md:pt-[70px] md:pb-[0px] lg:pt-[100px] lg:pb-[80px]  lg:relative">
           <!-- container of this section -->
           <div class="flex flex-col lg:flex-row gap-9 lg:gap-12 justify-center items-center">
             <!-- flex flex-col lg:flex-row gap-9 lg:gap-12 justify-center items-center -->
@@ -239,12 +239,56 @@
 
         <!-- 2nd part -->
          <!-- start happy client section-->
-         <section></section>
+         <section class="container mx-auto w-[97%] px-5 py-8 mb-24 md:px-[35px] md:py-[40px] lg:py-[0px]">
+          <!-- container -->
+           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 p-[24px] lg:px-[25px] lg:py-[28px] bg-[#FFFFFF] rounded-2xl">
+            <!-- card 1 -->
+            <div class="flex flex-col justify-center items-center p-[20px] lg:p-[24px]">
+              <img class="mb-[10px]" src="./assets/comment-01.png" alt="">
+              <h4 class="text-[32px] md:text-[40px] font-extrabold text-[#494949] mb-[2px]">235+</h4>
+              <p class="text-[16px] font-medium text-[#737373]">Happy Client Review</p>
+            </div>
+            <!-- card 2 -->
+            <div class="flex flex-col justify-center items-center p-[20px] lg:p-[24px]">
+              <img class="mb-[10px]" src="./assets/departement.png" alt="">
+              <h4 class="text-[32px] md:text-[40px] font-extrabold text-[#494949] mb-[2px]">50+</h4>
+              <p class="text-[16px] font-medium text-[#737373]">Work Departments</p>
+            </div>
+            <!-- card 3 -->
+            <div class="flex flex-col justify-center items-center p-[20px] lg:p-[24px]">
+              <img class="mb-[10px]" src="./assets/Group 8.png" alt="">
+              <h4 class="text-[32px] md:text-[40px] font-extrabold text-[#494949] mb-[2px]">30k+</h4>
+              <p class="text-[16px] font-medium text-[#737373]">Our Happy Client</p>
+            </div>
+            <!-- card 4 -->
+            <div class="flex flex-col justify-center items-center p-[20px] lg:p-[24px]">
+              <img class="mb-[10px]" src="./assets/user-multiple.png" alt="">
+              <h4 class="text-[32px] md:text-[40px] font-extrabold text-[#494949] mb-[2px]">307+</h4>
+              <p class="text-[16px] font-medium text-[#737373]">Staff Members</p>
+            </div>
+           </div>
+         </section>
          <!-- end happy client section-->
 
         <!-- 3rd part -->
          <!-- start works process section-->
-         <section></section>
+         <section>
+          <!-- container -->
+           <div>
+            <!-- content part -->
+             <div>
+              <button class="hover:bg-slate-200 duration-300 font-bold text-[#494949] bg-[#FFFFFF] py-1 px-3 mb-4 rounded-full"><i class="fa-solid fa-arrow-right mr-1"></i><a class="" href="">About Us</a></button>
+              <h1></h1>
+              <p></p>
+             </div>
+
+             <!-- card part -->
+              <div>
+                <!-- card 1 -->
+                 <div></div>
+              </div>
+           </div>
+         </section>
          <!-- end works process section -->
       </section>
     </main>
