added a changes file

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
               class="md:col-span-2 h-fit lg:col-span-4 p-5 md:p-6 bg-[#FAFAFA] opacity-90 rounded-2xl border border-solid border-[#E9E9E9]"
             >
               <img
-                class="w-full h-[300px] md:h-[179px] object-cover rounded-2xl"
+                class="w-full md:h-[179px] object-cover rounded-2xl"
                 src="./assets/img2.png"
                 alt=""
               />
