last commit of portfolio section

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
               <div
                 class="w-full grid grid-cols-1 md:grid-cols-12 gap-6 lg:gap-4 rounded-2xl bg-[#FAFAFA] opacity-90 p-5 lg:p-6"
               >
-                <div class="md:col-span-5 rounded-2xl">
+                <div class="md:col-span-5">
                   <img
                     class="w-full md:h-[179px] object-cover rounded-2xl"
                     src="./assets/img1.png"
@@ -517,7 +517,7 @@
               class="md:col-span-2 h-fit lg:col-span-4 p-5 md:p-6 bg-[#FAFAFA] opacity-90 rounded-2xl border border-solid border-[#E9E9E9]"
             >
               <img
-                class="w-full h-[197] md:h-[179px] object-cover rounded-2xl"
+                class="w-full md:h-[179px] object-cover rounded-2xl"
                 src="./assets/img2.png"
                 alt=""
               />
@@ -558,8 +558,7 @@
                     Commercial
                   </h4>
                   <p class="text-[16px] font-medium text-[#737373] mb-6">
-                    The barn house captivates with its blend of rustic charm and The barn and
-                    modern.
+                    The barn house captivates with its blend of rustic charm and The barn and modern. The barn and modern.
                   </p>
                   <button
                     class="text-[16px] font-bold flex justify-center items-center gap-[5px]"
