--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       </section>
       <!-- end 1st section -->
     </header>
-    <main>
+    <main class="bg-[#F2F2F2]">
       <!-- this section included 3 part -->
       <!-- container of 3 sections -->
       <section class="mt-12 md:mt-16 lg:mt-20 bg-[#F2F2F2]">
@@ -359,7 +359,7 @@
         <section class="">
           <!-- container -->
           <div
-            class="container mx-auto w-[97%] px-3 pb-8 mb-8 md:mb-10 md:pt-[20px] md:pb-16 lg:mb-20 lg:pt-6 lg:pb-20"
+            class="container mx-auto w-[97%] px-3 pb-8 pt-5 md:pt-[20px] md:pb-16 lg:mb-20 lg:pt-6 lg:pb-20"
           >
             <!-- content part -->
             <div
@@ -453,15 +453,15 @@
       <!-- end 3 part -->
 
       <!-- start latest portfolio -->
-      <section class="container mx-auto mt-3 mb-10 w-[97%]">
+      <section class="bg-[#F2F2F2] lg:bg-white lg:py-16">
         <!-- container -->
-        <div class="container mx-auto mt-3 px-5 lg:px-5 py-4 lg:py-6 mb-10">
+        <div class="container mx-auto pt-5 px-5 mb-10 w-[97%] lg:px-5">
           <!-- content part -->
           <div
             class="flex flex-col justify-center items-center text-center mb-6 md:mb-6 lg:mb-8"
           >
             <button
-              class="hover:bg-slate-200 duration-300 font-bold text-[#494949] bg-[#ABEF5F] py-1 px-4 mb-4 rounded-full"
+              class="hover:bg-slate-300 duration-300 font-bold text-[#494949] bg-[#e9ebe7] py-1 px-4 mb-4 rounded-full"
             >
               <i class="fa-solid fa-arrow-right mr-1"></i
               ><a class="" href="">Explore our Latest works</a>
@@ -497,11 +497,11 @@
                 </div>
                 <div class="md:col-span-7">
                   <h4
-                    class="text-[20px] md:text-[24px] font-extrabold mb-5 text-[#494949]"
+                    class="text-[20px] md:text-[24px] font-extrabold mb-4 text-[#494949]"
                   >
                     Commercial
                   </h4>
-                  <p class="text-[16px] font-medium text-[#737373] mb-6">
+                  <p class="text-[16px] font-medium text-[#737373] mb-4">
                     The barn house captivates with its blend of rustic charm and
                     modern. The barn house captivates with its blend of rustic
                     charm and modern .
@@ -561,13 +561,13 @@
                 </div>
                 <div class="md:col-span-6">
                   <h4
-                    class="text-[20px] md:text-[24px] font-extrabold mb-5 text-[#494949]"
+                    class="text-[20px] md:text-[24px] font-extrabold mb-4 text-[#494949]"
                   >
                     Commercial
                   </h4>
-                  <p class="text-[16px] font-medium text-[#737373] mb-6">
+                  <p class="text-[16px] font-medium text-[#737373] mb-4">
                     The barn house captivates with its blend of rustic charm and
-                    The barn and modern. The barn and modern.
+                    The barn and modern.
                   </p>
                   <a href=""
                     ><button
@@ -607,7 +607,186 @@
         </div>
       </section>
       <!-- end latest portfolio -->
-       
+      <!-- start articles and new section -->
+      <section class="bg-[#F2F2F2] py-3 md:py-12 lg:py-24">
+        <!-- container -->
+        <div class="container mx-auto px-5 mt-3 mb-10 w-[97%]">
+          <!-- content part -->
+          <div
+            class="flex flex-col justify-center items-center text-center mb-6 md:mb-6 lg:mb-8"
+          >
+            <button
+              class="hover:bg-slate-300 duration-300 font-bold text-[#494949] bg-[#e9ebe7] py-1 px-4 mb-4 rounded-full"
+            >
+              <i class="fa-solid fa-arrow-right mr-1"></i
+              ><a class="" href="">Rinterio News</a>
+            </button>
+            <h1
+              class="text-[24px] mb-4 md:text-[32px] lg:text-[40px] md:mb-6 font-bold text-[#212121]"
+            >
+              Read Our Articles and News
+            </h1>
+            <p class="text-[16px] text-[#494949] font-medium">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, <br class="hidden md:block" />
+              featuring weathered wood, sleek metal accents.
+            </p>
+          </div>
+          <!-- start card part -->
+          <div class="mx-auto grid grid-cols-1 lg:grid-cols-3 gap-6 md:gap-5 lg:gap-6">
+            <!-- card 1 -->
+            <div class="">
+              <div
+                class="md:grid md:grid-cols-2 grid-cols-1 lg:grid-cols-1 md:gap-4 p-6 w-full bg-[#FAFAFA] shadow-2xl border rounded-2xl"
+              >
+                <figure class="mb-4">
+                  <img class="w-full" src="./assets/article1.png" alt="Shoes" />
+                </figure>
+
+                <div class="">
+                  <div class="flex justify-start items-center gap-1 mb-2">
+                    <img
+                      class="w-4 h-4"
+                      src="./assets/calendar-03.png"
+                      alt=""
+                    />
+                    <p class="text-[14px] font-medium text-[#737373]">
+                      July14, 2024
+                    </p>
+                    <img
+                      class="w-4 h-4"
+                      src="./assets/user-circle.png"
+                      alt=""
+                    />
+                    <p class="text-[14px] font-medium text-[#737373]">
+                      By Admin
+                    </p>
+                  </div>
+                  <h4 class="mb-2 text-[20px] font-extrabold">
+                    How to choose the furniture right of your home.
+                  </h4>
+                  <p class="mb-3 text-[16px] font-medium text-[#737373]">
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                  <a href=""
+                    ><button
+                      class="hover:bg-[#c8d6e4] duration-300 rounded-full p-2 text-[16px] font-bold flex justify-center items-center gap-[5px]"
+                    >
+                      View Details
+                      <img
+                        class="w-[22px] h-[22px]"
+                        src="./assets/arrow-up-right-01.png"
+                        alt=""
+                      /></button
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <!-- card 2 -->
+            <div class="">
+              <div
+                class="md:grid md:grid-cols-2 grid-cols-1 lg:grid-cols-1 md:gap-4 p-6 w-full bg-[#FAFAFA] shadow-2xl border rounded-2xl"
+              >
+                <figure class="mb-4">
+                  <img class="w-full" src="./assets/article2.png" alt="Shoes" />
+                </figure>
+
+                <div class="">
+                  <div class="flex justify-start items-center gap-1 mb-2">
+                    <img
+                      class="w-4 h-4"
+                      src="./assets/calendar-03.png"
+                      alt=""
+                    />
+                    <p class="text-[14px] font-medium text-[#737373]">
+                      July14, 2024
+                    </p>
+                    <img
+                      class="w-4 h-4"
+                      src="./assets/user-circle.png"
+                      alt=""
+                    />
+                    <p class="text-[14px] font-medium text-[#737373]">
+                      By Admin
+                    </p>
+                  </div>
+                  <h4 class="mb-2 text-[20px] font-extrabold">
+                    How to choose the furniture right of your home.
+                  </h4>
+                  <p class="mb-3 text-[16px] font-medium text-[#737373]">
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                  <a href=""
+                    ><button
+                      class="hover:bg-[#c8d6e4] duration-300 rounded-full p-2 text-[16px] font-bold flex justify-center items-center gap-[5px]"
+                    >
+                      View Details
+                      <img
+                        class="w-[22px] h-[22px]"
+                        src="./assets/arrow-up-right-01.png"
+                        alt=""
+                      /></button
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <!-- card 3 -->
+            <div class="">
+              <div
+                class="md:grid md:grid-cols-2 grid-cols-1 lg:grid-cols-1 md:gap-4 p-6 w-full bg-[#FAFAFA] shadow-2xl border rounded-2xl"
+              >
+                <figure class="mb-4">
+                  <img class="w-full" src="./assets/article3.png" alt="Shoes" />
+                </figure>
+
+                <div class="">
+                  <div class="flex justify-start items-center gap-1 mb-2">
+                    <img
+                      class="w-4 h-4"
+                      src="./assets/calendar-03.png"
+                      alt=""
+                    />
+                    <p class="text-[14px] font-medium text-[#737373]">
+                      July14, 2024
+                    </p>
+                    <img
+                      class="w-4 h-4"
+                      src="./assets/user-circle.png"
+                      alt=""
+                    />
+                    <p class="text-[14px] font-medium text-[#737373]">
+                      By Admin
+                    </p>
+                  </div>
+                  <h4 class="mb-2 text-[20px] font-extrabold">
+                    How to choose the furniture right of your home.
+                  </h4>
+                  <p class="mb-3 text-[16px] font-medium text-[#737373]">
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                  <a href=""
+                    ><button
+                      class="hover:bg-[#c8d6e4] duration-300 rounded-full p-2 text-[16px] font-bold flex justify-center items-center gap-[5px]"
+                    >
+                      View Details
+                      <img
+                        class="w-[22px] h-[22px]"
+                        src="./assets/arrow-up-right-01.png"
+                        alt=""
+                      /></button
+                  ></a>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+          <!-- end card part -->
+        </div>
+      </section>
+      <!-- end articles and new section -->
     </main>
   </body>
 </html>
